wrote parser for links

--- a/micro-synapse.cabal
+++ b/micro-synapse.cabal
@@ -25,4 +25,5 @@ executable micro-synapse
                        cmark,
                        yaml,
                        frontmatter,
-                       happstack-server
+                       happstack-server,
+                       attoparsec
