--- a/micro-synapse.cabal
+++ b/micro-synapse.cabal
@@ -15,6 +15,11 @@ extra-source-files:  README.md
 
 executable micro-synapse
   hs-source-dirs:      src
+  other-modules:       Web.Server,
+                       Cli.Commands,
+                       Builder.Wiki,
+                       Builder.Note,
+                       Parser.Innerlinks
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
