added css styling

--- a/micro-synapse.cabal
+++ b/micro-synapse.cabal
@@ -33,4 +33,5 @@ executable micro-synapse
                        happstack-server,
                        attoparsec,
                        fsnotify,
-                       lucid
+                       lucid,
+                       clay
