--- a/micro-synapse.cabal
+++ b/micro-synapse.cabal
@@ -23,6 +23,7 @@ executable micro-synapse
                        Builder.Templating.Templates
                        Builder.Templating.Styling
                        Parser.Innerlinks
+                       Helpers.Helpers
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
