--- a/micro-synapse.cabal
+++ b/micro-synapse.cabal
@@ -21,7 +21,8 @@ executable micro-synapse
                        Builder.Note,
                        Builder.Tree,
                        Builder.Templating.Templates,
-                       Builder.Templating.Styling,
+                       Builder.Styling.Style,
+                       Builder.Styling.Variables,
                        Parser.Innerlinks,
                        Helpers.Helpers,
                        Paths_micro_synapse
